Added ping to documentation

--- a/report/report.tex
+++ b/report/report.tex
@@ -127,7 +127,7 @@ disponibile. Il client invece cercherà di connettersi e qualora non trovasse ne
 interrompere il sistema digitando "exit", o tornare al menu iniziale digitando "-1".
 Qualora si dovesse chiudere il client il gateway rimarrà aperto attendendo una nuova connessione dal client.
 È possibile mandare una richiesta al gateway di visualizzare quali droni sono connessi con il comando "drones" quando si è nel menù di input indirizzo. La scelta del drone da 
-utilizzare per la consegna è da fare specificando l'indirizzo IP.
+utilizzare per la consegna è da fare specificando l'indirizzo IP. Il client inoltre ha il comando 'ping' che invia al gateway una richiesta per vedere sulla console il tempo di risposta in millisecondi.
 È possibile terminare uno qualunque dei componenti con l'interrupt da tastiera CTRL+C.
 
 \chapter{Divisione del progetto}
